Implement first iteration of the LoginAction

--- a/web/static/css/frame.sass
+++ b/web/static/css/frame.sass
@@ -1,4 +1,4 @@
-$content-width: 70%
+$content-width: 60%
 $footer-height: 40px
 
 html
@@ -9,6 +9,7 @@ body
   /* Margin bottom by footer height */
   margin-bottom: $footer-height
   background-color: #e3ede2
+  font-family: 'Lato', sans-serif
 
 .footer
   position: absolute
@@ -45,3 +46,8 @@ body
 
 #navBar
   margin-bottom: 40px
+
+.centered
+  margin-left: auto
+  margin-right: auto
+  float: none
