--- a/web/static/css/seminarList.sass
+++ b/web/static/css/seminarList.sass
@@ -15,7 +15,7 @@ $listItemEntryHeight: 40px
   position: relative
 
   .seminarListItemEntry
-    height: $listItemEntryHeight
+    min-height: $listItemEntryHeight
     border-right: 1px solid black
     display: flex
     justify-content: center
