Implement seminar enrolling functionality

--- a/web/static/css/seminarList.sass
+++ b/web/static/css/seminarList.sass
@@ -23,6 +23,7 @@ $listItemEntryHeight: 40px
     flex-direction: column
     button
       width: 40%
+      z-index: 101
 
   .seminarListItemEntry:last-child
     border-right: 0
