implement will make the height of the seminarlist responsive

--- a/web/static/css/seminarList.sass
+++ b/web/static/css/seminarList.sass
@@ -32,7 +32,7 @@ $listItemEntryHeight: 40px
     position: absolute
     top: 0
     left: 0
-    height: $listItemEntryHeight
+    min-height: 100%
     width: 100%
     opacity: 0
     z-index: 100
