Make tests editable
- big refactoring concerning Test adding and editing
- deleting the db is recommended
- please test everything, i tried to test a lot but not sure whether i got everything covered (form validation, pressing back button etc.)

--- a/web/static/css/home.sass
+++ b/web/static/css/home.sass
@@ -1,9 +1,4 @@
-.infoText
-  text-align: left
-  background-color: #d9e0f6
+@import "seminarList"
 
-.homeListCursor
-  cursor: crosshair
-
-
-
+.seminarListItem
+  cursor: default
