--- a/web/static/css/seminarDetail.sass
+++ b/web/static/css/seminarDetail.sass
@@ -38,3 +38,9 @@ $participantEntryHeight: 25px
 
 .participantList:nth-child(2n)
   background-color: #C1FFC3
+
+.button-tooltip-wrapper
+  width: 100%
+#enrollItem
+  padding-top: 0.5em
+  padding-bottom: 0.5em
