change cursor on table questionList to default

--- a/web/static/css/edit-test.sass
+++ b/web/static/css/edit-test.sass
@@ -13,7 +13,7 @@ $listItemEntryHeight: 40px
 
 
 .questionListItem
-  cursor: hand
+  cursor: default
   width: 100%
   margin: 0 auto
   border-left: 1px solid black
@@ -36,18 +36,6 @@ $listItemEntryHeight: 40px
   .questionListItemEntry:last-child
     border-right: 0
 
-  .overlay
-    position: absolute
-    top: 0
-    left: 0
-    min-height: 100%
-    width: 100%
-    opacity: 0
-    z-index: 100
-    background: rgba(0, 0, 0, 0.5)
-    -moz-transition: all 1s
-    -webkit-transition: all 1s
-    transition: all 1s
 
 .questionListItem:last-child
   border-bottom: 1px solid black
