Implement Postpone Test and Countdown

--- a/web/static/css/perform-test.sass
+++ b/web/static/css/perform-test.sass
@@ -19,7 +19,7 @@
   padding: 20px
   height: auto
 
-.slickContainer
+#slickContainer
   border-radius: 30px
   border: 1px solid black
   background-color: white
