Add deletion of quesitons

--- a/web/static/css/edit-test.sass
+++ b/web/static/css/edit-test.sass
@@ -50,3 +50,8 @@ $listItemEntryHeight: 40px
   @extend .questionListItem
   cursor: default
   background-color: #d9e0f6
+
+#buttonItemEntry
+  flex-direction: inherit
+#deleteButton
+  width: 10%
