--- a/web/static/css/edit-test.sass
+++ b/web/static/css/edit-test.sass
@@ -54,4 +54,6 @@ $listItemEntryHeight: 40px
 #buttonItemEntry
   flex-direction: inherit
 #deleteButton
+  margin-left: 0.2em
   width: 10%
+  padding-left: 8px
